--- a/app/src/main/res/layout/item_file.xml
+++ b/app/src/main/res/layout/item_file.xml
@@ -3,9 +3,8 @@
                                     xmlns:app="http://schemas.android.com/apk/res-auto"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    app:cardCornerRadius="15dp"
-                                    app:cardElevation="13dp"
-    android:background="@color/mb_gray">
+                                    android:background="@color/mb_gray"
+                                  >
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                   xmlns:app="http://schemas.android.com/apk/res-auto"
